add spanish language and update i18n

--- a/.env
+++ b/.env
@@ -1,6 +1,4 @@
 //DEFAULT .env configuration
 
 BASE_URL=
-I18N_URL=
-I18N_EN_TOKEN=
-I18N_PT_TOKEN=
+I18N_URL=https://raw.githubusercontent.com/DwCleb/Simulae/master/source/i18n
